--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "csv-parse": "^1.0.2",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
