--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "fs": "0.0.2",
     "method-override": "^2.3.5",
+    "mongoose": "^4.4.10",
     "morgan": "^1.6.1",
     "request": "^2.69.0",
     "serve-favicon": "~2.3.0",
